--- a/index.html
+++ b/index.html
@@ -4,89 +4,129 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Junghye Kim's Personal Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: sans-serif;
-            line-height: 1.6;
-            margin: 40px;
-            max-width: 800px;
-            margin: 40px auto;
-            padding: 0 20px;
-            color: #333;
+            /* 'Lato' 폰트를 기본으로 사용, 없으면 sans-serif 사용 */
+            font-family: 'Lato', sans-serif;
+            line-height: 1.7;
+            background-color: #f8f9fa; /* 부드러운 배경색 */
+            color: #343a40; /* 가독성 좋은 어두운 회색 */
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 850px;
+            margin: 50px auto;
+            padding: 40px;
+            background-color: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.05);
         }
         h1, h2 {
-            border-bottom: 2px solid #eee;
+            color: #2c3e50; /* 차분한 다크 블루 */
+            border-bottom: 2px solid #e9ecef; /* 부드러운 회색 밑줄 */
             padding-bottom: 10px;
         }
         h1 {
-            font-size: 2.5em;
+            font-size: 2.8em;
+            margin-bottom: 0.5em;
         }
         h2 {
             font-size: 1.8em;
-            margin-top: 40px;
+            margin-top: 50px;
         }
         p, li {
-            font-size: 1em;
+            font-size: 1.05em;
         }
         a {
-            color: #007bff;
+            color: #007bff; /* 선명한 블루 */
             text-decoration: none;
+            font-weight: bold;
         }
         a:hover {
             text-decoration: underline;
+            color: #0056b3; /* 마우스를 올렸을 때 더 진한 블루 */
         }
         .profile {
             display: flex;
             align-items: center;
+            margin-bottom: 40px;
         }
         .profile-img {
-            border-radius: 50%; /* 이미지를 원형으로 만듭니다 */
-            width: 150px;
-            height: 150px;
-            object-fit: cover; /* 이미지 비율을 유지하면서 채웁니다 */
-            margin-right: 30px;
+            border-radius: 50%;
+            /* 사진 크기를 키움 */
+            width: 200px;
+            height: 200px;
+            object-fit: cover;
+            margin-right: 40px;
+            /* 부드러운 그림자 효과 추가 */
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
         .profile-info {
             flex: 1;
         }
+        .profile-info p {
+            margin: 10px 0;
+        }
+        .links {
+            margin-top: 15px;
+        }
+        .links p {
+            display: inline-block;
+            margin-right: 25px;
+        }
         .publication-item {
-            margin-bottom: 15px;
+            margin-bottom: 20px;
+        }
+        .publication-item p {
+            margin: 5px 0;
         }
     </style>
 </head>
 <body>
 
-    <div class="profile">
-        <img src="junghyekim_profile.jpeg" alt="Junghye Kim's profile picture" class="profile-img">
-        <div class="profile-info">
-            <h1>Junghye Kim</h1>
-            <p><strong>Contact:</strong> <a href="mailto:jh0912@korea.ac.kr">jh0912@korea.ac.kr</a></p>
-            <p><strong><a href="CV.pdf" target="_blank">CV</a></strong></p>
+    <div class="container">
+        <div class="profile">
+            <img src="junghyekim_profile.jpeg" alt="Junghye Kim's profile picture" class="profile-img">
+            <div class="profile-info">
+                <h1>Junghye Kim</h1>
+                <p><strong>Contact:</strong> <a href="mailto:jh0912@korea.ac.kr">jh0912@korea.ac.kr</a></p>
+                <div class="links">
+                    <p><strong><a href="CV.pdf" target="_blank">CV</a></strong></p>
+                    <p><strong><a href="https://scholar.google.com/citations?user=RPQxMJwAAAAJ&hl=ko" target="_blank">Google Scholar</a></strong></p>
+                </div>
+            </div>
         </div>
-    </div>
 
-    <h2>About Me</h2>
-    <p>
-        I'm a M.S. student at Korea University's AGILAB, currently advised by Prof. Sungwoong Kim and Prof. Sungbin Lim.
-    </p>
-    <p>
-        My research interests lie in multimodal large language models, particularly unified models for video understanding and generation. I aim to enhance semantic alignment and model reliability to advance intelligent video-based AI systems.
-    </p>
+        <h2>About Me</h2>
+        <p>
+            I'm a M.S. student at Korea University's <a href="https://agi.korea.ac.kr/" target="_blank">AGILAB</a>, currently advised by Prof. Sungwoong Kim and Prof. Sungbin Lim.
+        </p>
+        <p>
+            I received my B.S. from Dongguk University, where I double-majored in Information & Communication Engineering and Data Science.
+        </p>
+        <p>
+            My research interests lie in multimodal large language models, particularly unified models for video understanding and generation. I aim to enhance semantic alignment and model reliability to advance intelligent video-based AI systems.
+        </p>
 
-    <h2>Publications</h2>
-    <div class="publication-item">
-        <p><strong>DGU-HAO : A Dataset with Daily Life Objects for Comprehensive 3D Human Action Analysis</strong> (IEEE ACCESS, 2024)</p>
-        <p>Jiho Park, Junghye Kim, Yujung Gil, Dongho Kim</p>
-    </div>
-    <div class="publication-item">
-        <p><strong>APMT : Adaptive Prompt-Matching Technique to enhance your answers</strong> (Korea Software Congress, 2023)</p>
-        <p>Yunji Kim, Junghye Kim*, Yeosol Heo*, Jihie Kim (* : Equal Contribution)</p>
-    </div>
+        <h2>Publications</h2>
+        <div class="publication-item">
+            <p><strong>DGU-HAO : A Dataset with Daily Life Objects for Comprehensive 3D Human Action Analysis</strong> (IEEE ACCESS, 2024)</p>
+            <p>Jiho Park, Junghye Kim, Yujung Gil, Dongho Kim</p>
+        </div>
+        <div class="publication-item">
+            <p><strong>APMT : Adaptive Prompt-Matching Technique to enhance your answers</strong> (Korea Software Congress, 2023)</p>
+            <p>Yunji Kim, Junghye Kim*, Yeosol Heo*, Jihie Kim (* : Equal Contribution)</p>
+        </div>
 
-    <h2>Patents</h2>
-    <div class="publication-item">
-        <p><strong>Apparatus and Method of Classifying and Detecting Real-Time Abnormal Behavior Based on Artificial Intelligence</strong> (No. 10-0004987(2024)) (Submitted)</p>
-        <p>Sangsoo Lim, Junghye Kim, Junho Choi, Seunghyeon Jung</p>
+        <h2>Patents</h2>
+        <div class="publication-item">
+            <p><strong>Apparatus and Method of Classifying and Detecting Real-Time Abnormal Behavior Based on Artificial Intelligence</strong> (No. 10-0004987(2024)) (Submitted)</p>
+            <p>Sangsoo Lim, Junghye Kim, Junho Choi, Seunghyeon Jung</p>
+        </div>
     </div>
 
 </body>
