index.html modified

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                 <div class="links">
                     <p><strong><a href="CV.pdf" target="_blank">CV</a></strong></p>
                     <p><strong><a href="https://scholar.google.com/citations?user=RPQxMJwAAAAJ&hl=ko" target="_blank">Google Scholar</a></strong></p>
+                    <p><strong><a href="https://github.com/junghye01" target="_blank">Github</a></strong></p>
                 </div>
             </div>
         </div>
